remove unused code that causes crashes, bug 242368, p=fantasai r=bernd sr=rbs a=asa